// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PoolDetailsStats > pool balance chart not visible on mobile 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c6 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
}

.c12 {
  color: #E10F0F;
}

.c4 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c2 {
  font-weight: 485;
  font-size: 24px;
  line-height: 36px;
}

.c1 {
  gap: 24px;
  padding: 20px;
  border-radius: 20px;
  background: #F9F9F9;
  width: 100%;
  z-index: 1;
  margin-top: -24px;
}

.c3 {
  gap: 8px;
  flex: 1;
  min-width: 180px;
}

.c7 {
  justify-content: space-between;
}

.c8 {
  font-weight: 485;
  font-size: 16px;
  line-height: 24px;
  width: max-content;
}

.c9 {
  display: flex;
  align-items: center;
  color: #131313;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c9 :hover {
  opacity: 0.6;
}

.c9 :active {
  opacity: 0.4;
}

.c10 {
  gap: 4px;
  width: 100%;
  align-items: flex-end;
}

.c11 {
  color: #131313;
  font-size: 36px;
  font-weight: 485;
  line-height: 44px;
}

@media (max-width: 1024px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .c1 {
    flex-direction: row;
    background: transparent;
    flex-wrap: wrap;
    padding: 20px 0px;
    justify-content: space-between;
    margin-top: 0px;
  }
}

@media (max-width: 640px) {
  .c3 {
    min-width: 150px;
  }
}

@media (max-width: 1024px) {
  .c7 {
    flex-direction: column;
  }
}

@media (max-width: 1024px) {
  .c8 {
    font-size: 20px;
    line-height: 28px;
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .c10 {
    flex-direction: column;
    gap: 0px;
    align-items: flex-start;
  }
}

@media (max-width: 1024px) {
  .c11 {
    font-size: 20px;
    line-height: 28px;
  }
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 css-vurnku"
      >
        Stats
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          Pool balances
        </div>
        <div
          class="c5 c6 c7"
        >
          <div
            class="c5 c6 c8"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
                data-testid="token-logo"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
                />
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                  data-testid="img-token-image"
                >
                  <img
                    height="20"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                    style="object-fit: contain; border-radius: 10px; z-index: 1;"
                    width="20"
                  />
                </div>
              </div>
              <h3
                class="font_heading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-20px _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
                data-disable-theme="true"
              >
                90.9M
              </h3>
              <a
                class="c9"
                data-discover="true"
                href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
              >
                USDC
              </a>
            </div>
          </div>
          <div
            class="c5 c6 c8"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
                data-testid="token-logo"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
                />
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                  data-testid="img-token-image"
                >
                  <img
                    height="20"
                    src="eth-logo.png"
                    style="object-fit: contain; border-radius: 10px; z-index: 1;"
                    width="20"
                  />
                </div>
              </div>
              <h3
                class="font_heading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-20px _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
                data-disable-theme="true"
              >
                82.5K
              </h3>
              <a
                class="c9"
                data-discover="true"
                href="/explore/tokens/ethereum/NATIVE"
              >
                ETH
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          TVL
        </div>
        <div
          class="c5 c6 c10"
        >
          <div
            class="c11 css-vurnku"
          >
            $223.2M
          </div>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c12"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="c4 css-1urox24"
            >
              0.37%
            </div>
          </div>
        </div>
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          24H volume
        </div>
        <div
          class="c5 c6 c10"
        >
          <div
            class="c11 css-vurnku"
          >
            $194.3M
          </div>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c12"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="c4 css-1urox24"
            >
              17.75%
            </div>
          </div>
        </div>
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          24H fees
        </div>
        <div
          class="c5 c6 c10"
        >
          <div
            class="c11 css-vurnku"
          >
            $97.1K
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PoolDetailsStats > renders stats text correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c6 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
}

.c14 {
  color: #E10F0F;
}

.c4 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c2 {
  font-weight: 485;
  font-size: 24px;
  line-height: 36px;
}

.c1 {
  gap: 24px;
  padding: 20px;
  border-radius: 20px;
  background: #F9F9F9;
  width: 100%;
  z-index: 1;
  margin-top: -24px;
}

.c3 {
  gap: 8px;
  flex: 1;
  min-width: 180px;
}

.c7 {
  justify-content: space-between;
}

.c8 {
  font-weight: 485;
  font-size: 16px;
  line-height: 24px;
  width: max-content;
}

.c9 {
  display: flex;
  align-items: center;
  color: #131313;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c9 :hover {
  opacity: 0.6;
}

.c9 :active {
  opacity: 0.4;
}

.c10 {
  height: 8px;
  width: 99.99999996483845%;
  background: #FF37C7;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  border-right: 1px solid #F9F9F9;
}

.c11 {
  height: 8px;
  width: 3.5161546763980574e-8%;
  background: #222222;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  border-left: 1px solid #F9F9F9;
}

.c12 {
  gap: 4px;
  width: 100%;
  align-items: flex-end;
}

.c13 {
  color: #131313;
  font-size: 36px;
  font-weight: 485;
  line-height: 44px;
}

@media (max-width: 1024px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .c1 {
    flex-direction: row;
    background: transparent;
    flex-wrap: wrap;
    padding: 20px 0px;
    justify-content: space-between;
    margin-top: 0px;
  }
}

@media (max-width: 640px) {
  .c3 {
    min-width: 150px;
  }
}

@media (max-width: 1024px) {
  .c7 {
    flex-direction: column;
  }
}

@media (max-width: 1024px) {
  .c8 {
    font-size: 20px;
    line-height: 28px;
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .c12 {
    flex-direction: column;
    gap: 0px;
    align-items: flex-start;
  }
}

@media (max-width: 1024px) {
  .c13 {
    font-size: 20px;
    line-height: 28px;
  }
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 css-vurnku"
      >
        Stats
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          Pool balances
        </div>
        <div
          class="c5 c6 c7"
        >
          <div
            class="c5 c6 c8"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <h3
                class="font_heading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-20px _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
                data-disable-theme="true"
              >
                90.9M
              </h3>
              <a
                class="c9"
                data-discover="true"
                href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
              >
                USDC
              </a>
            </div>
          </div>
          <div
            class="c5 c6 c8"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <h3
                class="font_heading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-20px _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
                data-disable-theme="true"
              >
                82.5K
              </h3>
              <a
                class="c9"
                data-discover="true"
                href="/explore/tokens/ethereum/NATIVE"
              >
                ETH
              </a>
            </div>
          </div>
        </div>
        <div
          class="c5 c6"
          data-testid="pool-balance-chart"
        >
          <div
            class="c10"
            percent="0.9999999996483845"
          />
          <div
            class="c11"
            percent="3.5161546763980577e-10"
          />
        </div>
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          TVL
        </div>
        <div
          class="c5 c6 c12"
        >
          <div
            class="c13 css-vurnku"
          >
            $223.2M
          </div>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c14"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="c4 css-1urox24"
            >
              0.37%
            </div>
          </div>
        </div>
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          24H volume
        </div>
        <div
          class="c5 c6 c12"
        >
          <div
            class="c13 css-vurnku"
          >
            $194.3M
          </div>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c14"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <div
              class="c4 css-1urox24"
            >
              17.75%
            </div>
          </div>
        </div>
      </div>
      <div
        class="c0 c3"
      >
        <div
          class="c4 css-1urox24"
        >
          24H fees
        </div>
        <div
          class="c5 c6 c12"
        >
          <div
            class="c13 css-vurnku"
          >
            $97.1K
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
